# parody-bot

./: .ghci  .gitignore  Artists.hs  SpotTypes.hs  TAGS  albums.json  artists.json  parody-bot.cabal  parody_song_id_list.hobj  tracks.json
src/: AddPopularity.hs  AlchemyInterface.hs  AlexWPQuery.hs  DuckDuckGoSearch.hs  GoogleCustomSearch.hs  Main.hs  MyRegexes.hs  NeoParodyInterface.hs  OthTypes.hs  ParodyBotUtil.hs  Scrawl.hs  SpotSearch.hs  SpotTypes.hs  WikipediaSearch.hs  scraps.hs
