name:                parody-bot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/parody-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable parody-bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       SpotTypes
                     , NeoParodyInterface
                     , MyRegexes
  build-depends:       HTTP >= 4000.2.23
                     , aeson >= 0.10.0.0
                     , aeson-pretty >= 0.7.2
                     , base >= 4.7 && < 5
                     , base64-bytestring >= 1.0.0.1
                     , bytestring >= 0.10.6.0
                     , classy-prelude >= 0.12.5
                     , hashable >= 1.2.3.3
                     , haskell-neo4j-client >= 0.3.2.0
                     , json-autotype >= 1.0.10
                     , lens >= 4.13
                     , lens-aeson >= 1.0.0.5
                     , pcre-heavy
                     , process >= 1.2.3.0
                     , safe >= 0.3.9
                     , text >= 1.2.2.0
                     , unordered-containers >= 0.2.5.1
                     , wreq >= 0.4.1.0
                     , yaml >= 0.8.15.2
                      